force-app/main/default/objects/Collateral__c/Collateral__c.object-meta.xml
<CustomObject>
    <label>Collateral</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Collateral No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collateral</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>