force-app/main/default/objects/Collateral__c/fields/Appraisal_Value__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Value__c</fullName>
    <label>Appraisal Value</label>
    <summarizedField>Collateral_Detail__c.Appraisal_Value__c</summarizedField>
    <summaryForeignKey>Collateral_Detail__c.Collateral__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>