force-app/main/default/objects/Collateral__c/fields/Collateral_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Group_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collateral Group Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>