force-app/main/default/objects/Collateral__c/fields/Collateral_Group_Type_Key__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Group_Type_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Collateral Group Type Key</label>
    <length>131</length>
    <required>true</required>
    <type>Text</type>
</CustomField>