force-app/main/default/objects/Collateral__c/fields/Pledge_Value__c.field-meta.xml
<CustomField>
    <fullName>Pledge_Value__c</fullName>
    <label>Pledge Value</label>
    <summarizedField>Collateral_Detail__c.Pledge_Value__c</summarizedField>
    <summaryForeignKey>Collateral_Detail__c.Collateral__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>